components/Contact/style.module.scss
@import '../../scss/config.scss';

.container {
	padding: 75px $default-spacing;
}

.content {
	height: auto;
	display: grid;
	justify-content: center;
}

.message {
	grid-row: 1;

	&-title {
		line-height: 40px;

		> span {
			color: $main;
		}
	}

	&-description {
		@include description(true, left);
		margin: 0;
	}
}

.form {
	grid-row: 2;
	margin: $default-spacing 0;
	text-align: center;

	.input {
		width: 100%;
		border: $default-border;
		padding: 15px;

		background: #fafafa;
		transition: background 0.15s ease-in-out;

		&:valid,
		&:focus {
			background: #fff;
		}
	}

	&-name {
		width: 100%;
		@include flex(0, flex-start);

		> label {
			margin-bottom: 8px;
		}

		> input.input {
			font-size: 0.8em;
		}
	}

	textarea {
		font-size: 1em;
		line-height: 25px;
		resize: vertical;
		margin: $default-spacing 0;
		max-height: 250px;
		min-height: 150px;
	}
}

.contact {
	grid-row: 3;
	margin: ($default-spacing * 2) 0;

	.phone,
	.email {
		margin: 25px 0;

		> .title {
			position: relative;

			margin-bottom: 8px;

			&:before,
			&:after {
				content: '';
				position: absolute;
				left: 5px;

				background: rgba(#ccc, 0.5);
			}

			$before-height: 15px;

			&:before {
				bottom: -$before-height - 5px;

				width: 2px;
				height: $before-height;
			}

			&:after {
				$before-width: 10px;

				bottom: -$before-height - 5px;

				width: $before-width;
				height: 2px;
			}
		}

		> .data {
			margin-left: $default-spacing;
			font-weight: 500;
		}
	}
}

.opening {
	.title {
		margin-bottom: 15px;
	}

	&-box {
		user-select: none;
		margin: 10px 0;
		padding: 8px $default-spacing;
		border: $default-border;
		// width: 375px;
		max-width: 325px;
		@include flex(space-between, $direction: row);
		border-radius: $border-radius;

		&-title {
			font-size: 1em;
		}
	}
}

/* default class */
.title {
	font-size: 0.8em;
	opacity: 0.75;
}

@media (min-width: 900px) {
	.content {
		grid-template-columns: 1fr 1fr;

		.message,
		.contact,
		.form {
			grid-row: initial;
		}
	}

	.message-description {
		@include description(false, left);
		max-width: none;
	}

	.contact {
		display: flex;
		flex-direction: column;
		justify-content: flex-end;
	}

	.form-name > input.input {
		font-size: 0.95em;
	}
}

